NIFI-14109 Refactored remaining processors and control services to be uniform when creating properties and relationships.